pixbuf-demo: don't lock the window size

What's the use of an animation demo, if you can interactively
resize it and show off how cool is your window system handling
updates?

https://bugzilla.gnome.org/show_bug.cgi?id=725172